--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/cake-by-htoo/",
+              "baseHref": "/cake_by_htoo/",
               "budgets": [
                 {
                   "type": "initial",
@@ -88,6 +88,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "outputPath": "docs",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
