--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/cake_by_htoo/",
+              "baseHref": "/cake_by_htoo/home",
               "budgets": [
                 {
                   "type": "initial",
@@ -73,7 +73,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "baseHref": "/cake-by-htoo/",
+              "baseHref": "/cake-by-htoo/home",
               "buildTarget": "bakery_info:build:production"
             },
             "development": {
